--- a/static/assets/styles.css
+++ b/static/assets/styles.css
@@ -1,6 +1,7 @@
 body {
   padding: 1rem;
   margin-top: 0.8rem;
+  max-width: 40rem;
 
   --gray: #718093;
   --red: #e84118;
@@ -16,20 +17,31 @@ h1 {
   font-size: 1.4rem;
 }
 
-h2, h2, h3, h4, h5, h6 {
+h2 {
   font-size: 1.2rem;
 }
 
-p {
-  display: block;
-  margin-bottom: 0.5rem;
+h3, h4, h5, h6 {
   font-size: 1rem;
+}
+
+p {
+  font-size: 1rem;
+  line-height: 1.3rem;
+  margin-bottom: 0.6rem;
 }
 
 ul, ol {
   list-style-position: outside;
   padding-left: 1.4rem;
   margin-bottom: 0.6rem;
+}
+
+ol ol,
+ul ul,
+ol ul,
+ul ol {
+  margin-bottom: 0;
 }
 
 li {
